@@ -20,7 +20,8 @@ abstract class tx_icslibnavitia_Node {
 	}
 	
 	protected function setDefaultValue($fieldname, $type) {
-		switch ($type) {
+		$type = t3lib_div::trimExplode(':', $type, true);
+		switch ($type[0]) {
 			case 'string':
 				$this->values[$fieldname] = '';
 				break;
@@ -40,6 +41,8 @@ abstract class tx_icslibnavitia_Node {
 				break;
 			case 'object':
 				$this->values[$fieldname] = null;
+				if (!empty($type[1]) && ($type[1]{strlen($type[1]) - 1} != '?'))
+					$this->values[$fieldname] = t3lib_div::makeInstance($type[1]);
 				break;
 			default:
 				trigger_error('Unknow type "' . $type . '" for field "' . $fieldname . '" in ' . $fieldsref . '.', E_USER_WARNING);
@@ -75,17 +78,28 @@ abstract class tx_icslibnavitia_Node {
 	
 	public function __set($name, $value) {
 		if (array_key_exists($name, $this->values)) {
-			$testFunc = 'is_' . self::getFieldsRefField($this->fieldsref, $name);
-			if (!$testFunc($value) && (($testFunc != 'is_object') || (!is_null($value)))) {
+			$type = self::getFieldsRefField($this->fields, $name);
+			if (empty($type)) {
 				$trace = debug_backtrace();
 				trigger_error(
-					'Property type mismatch via __set(): ' . $name . 
-					', expected: ' . self::getFieldsRefField($this->fieldsref, $name)
+					'Property is readonly via __set(): ' . $name . 
 					' in ' . $trace[0]['file'] .
 					' on line ' . $trace[0]['line'],
 					E_USER_WARNING);
+				return;
+			}
+			if (!self::checkValue($value, $type)) {
+				$trace = debug_backtrace();
+				trigger_error(
+					'Property type mismatch via __set(): ' . $name . 
+					', expected: ' . self::getFieldsRefField($this->fields, $name) .
+					' in ' . $trace[0]['file'] .
+					' on line ' . $trace[0]['line'],
+					E_USER_WARNING);
+				return;
 			}
 			$this->values[$name] = $value;
+			return;
 		}
 		$trace = debug_backtrace();
 		trigger_error(
@@ -93,7 +107,32 @@ abstract class tx_icslibnavitia_Node {
 			' in ' . $trace[0]['file'] .
 			' on line ' . $trace[0]['line'],
 			E_USER_NOTICE);
-		return null;
+	}
+	
+	protected static function checkValue(& $value, $type) {
+		$typeDef = t3lib_div::trimExplode(':', $type, true);
+		if ($typeDef[0] == 'object') {
+			if (strlen($typeDef[1]) > 1) {
+				if ($typeDef[1]{strlen($typeDef[1]) - 1} == '?') {
+					return class_exists(substr($typeDef[1], 0, -1)) ? (is_null($value) || (is_object($value) && is_a($value, substr($typeDef[1], 0, -1)))) : false;
+				}
+				else {
+					return class_exists($typeDef[1]) ? (is_object($value) && is_a($value, $typeDef[1])) : false;
+				}
+			}
+			else {
+				if ($typeDef[1] == '?') {
+					return is_null($value) || is_object($value);
+				}
+				else {
+					return is_object($value);
+				}
+			}
+		}
+		else {
+			$func = 'is_' . $typeDef[0];
+			return function_exists($func) ? $func($value) : false;
+		}
 	}
 	
 	public function __isset($name) {
@@ -102,7 +141,7 @@ abstract class tx_icslibnavitia_Node {
 	
 	public function __unset($name) {
 		if (array_key_exists($name, $this->values)) {
-			$this->setDefaultValue($name, self::getFieldsRefField($this->fieldsref, $name));
+			$this->setDefaultValue($name, self::getFieldsRefField($this->fields, $name));
 		}
 		trigger_error(
 			'Properties not unsettable, set default value if valid' .
