@@ -1,6 +1,6 @@
 <?php
 
-class tx_icslibnavitia_NodeList {
+class tx_icslibnavitia_NodeList implements tx_icslibnavitia_INodeList {
 	private $values;
 	private $type;
 	
@@ -17,9 +17,10 @@ class tx_icslibnavitia_NodeList {
 				' in ' . $trace[0]['file'] .
 				' on line ' . $trace[0]['line'],
 				E_USER_NOTICE);
-			return;
+			return $this;
 		}
 		$this->values[] = $item;
+		return $this;
 	}
 	
 	public function Insert(tx_icslibnavitia_Node $item, $index) {
@@ -30,7 +31,7 @@ class tx_icslibnavitia_NodeList {
 				' in ' . $trace[0]['file'] .
 				' on line ' . $trace[0]['line'],
 				E_USER_NOTICE);
-			return;
+			return $this;
 		}
 		if ((!is_int($index)) || ($index < 0) || ($index > count($this->values))) {
 			$trace = debug_backtrace();
@@ -41,14 +42,16 @@ class tx_icslibnavitia_NodeList {
 				E_USER_ERROR);			
 		}
 		array_splice($this->values, $index, 0, array($item));
+		return $this;
 	}
 
 	public function Remove(tx_icslibnavitia_Node $item) {
 		for ($i = 0; $i < count($this->values); $i++)
 			if ($this->values[$i] == $item) {
 				$this->RemoveAt($i);
-				return;
+				return $this;
 			}
+		return $this;
 	}
 	
 	public function RemoveAt($index) {
@@ -58,9 +61,11 @@ class tx_icslibnavitia_NodeList {
 				'Index out of bound for RemoveAt() or not an integer, index = ' . $index .
 				' in ' . $trace[0]['file'] .
 				' on line ' . $trace[0]['line'],
-				E_USER_ERROR);			
+				E_USER_ERROR);
+			return $this;
 		}
 		array_splice($this->values, $index, 1);
+		return $this;
 	}
 	
 	public function Get($index) {
@@ -94,6 +99,7 @@ class tx_icslibnavitia_NodeList {
 				E_USER_ERROR);			
 		}
 		$this->values[$index] = $item;
+		return $this;
 	}
 	
 	public function Count() {
@@ -102,5 +108,14 @@ class tx_icslibnavitia_NodeList {
 	
 	public function Clear() {
 		$this->values = array();
+		return $this;
+	}
+
+	public function AsReadOnly() {
+		return new tx_icslibnavitia_ReadOnlyNodeList($this);
+	}
+	
+	public function ToArray() {
+		return $this->values;
 	}
 }
