@@ -1,0 +1,24 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2011-08-19 11:55
+
+$extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
+$extensionClassesPath = t3lib_extMgm::extPath('ics_libnavitia') . 'Classes/';
+return array(
+	'tx_icslibnavitia_backward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Backward.php',
+	'tx_icslibnavitia_coord' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Coord.php',
+	'tx_icslibnavitia_forward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Forward.php',
+	'tx_icslibnavitia_line' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Line.php',
+	'tx_icslibnavitia_mode' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Mode.php',
+	'tx_icslibnavitia_network' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Network.php',
+	'tx_icslibnavitia_node' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Node.php',
+	'tx_icslibnavitia_nodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_NodeList.php',
+	'tx_icslibnavitia_readonlynodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ReadOnlyNodeList.php',
+	'tx_icslibnavitia_routepoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_RoutePoint.php',
+	'tx_icslibnavitia_stop' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Stop.php',
+	'tx_icslibnavitia_stoparea' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_StopArea.php',
+	'tx_icslibnavitia_stoppoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_StopPoint.php',
+	'tx_icslibnavitia_inodelist' => $extensionClassesPath . 'DataObjects/interface.tx_icslibnavitia_INodeList.php',
+	'tx_icslibnavitia_dummyscheduleservice' => $extensionClassesPath . 'Services/class.tx_icslibnavitia_DummyScheduleService.php',
+);
+?>
